k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apix-pay
  namespace: # informar o namespace do GCP
  labels:
    app: apix-pay
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
  selector:
    app: apix-pay
  type: NodePort
